FullQa New/src/PS Enterprise/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Forecast_Curve__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast Curve</label>
        <referenceTo>Forecast_Curve__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Grp__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsParentOpportunityServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsParentOpportunityServices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Change_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Services_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this is a services opportunity</inlineHelpText>
        <label>Is Services Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Child Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>Practice__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreBilledAmount__c</fullName>
        <label>Pre-Billed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Billed_Amount__c</fullName>
        <description>This field is a replacement for the old Pre-Billed Amount field (PreBilledAmount__c) which did not allow non-integer decimals.</description>
        <inlineHelpText>This field is a replacement for the old Pre-Billed Amount field (PreBilledAmount__c) which did not allow non-integer decimals.</inlineHelpText>
        <label>Pre-Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Project</label>
        <referenceTo>Proj__c</referenceTo>
        <relationshipLabel>Primary Project For Opportunities</relationshipLabel>
        <relationshipName>PrimaryProjectForOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Discount_Limit__c</fullName>
        <description>The rate card&apos;s minimum suggested bill rate to which the discount will be applied.</description>
        <inlineHelpText>The rate card&apos;s minimum suggested bill rate to which the discount will be applied.</inlineHelpText>
        <label>Rate Card Discount Limit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Percentage_Discount__c</fullName>
        <description>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request on an opportunity.</description>
        <inlineHelpText>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request on an opportunity.</inlineHelpText>
        <label>Rate Card Percentage Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</description>
        <inlineHelpText>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</inlineHelpText>
        <label>Rate Card Set</label>
        <referenceTo>Rate_Card_Set__c</referenceTo>
        <relationshipLabel>Rate Card Set Opportunities</relationshipLabel>
        <relationshipName>Rate_Card_Set_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Attached_From_Products__c</fullName>
        <label>Services Attached From Products</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.IsServicesProductLine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Services_Attached_Percent_From_Products__c</fullName>
        <formula>IF (Amount = 0, 0 , Services_Attached_From_Products__c / Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Attached % From Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <validationRules>
        <fullName>Discount_Rates_Must_Be_Between_0_to_100</fullName>
        <active>false</active>
        <description>The Rate Card Percentage Discount must be between 0 and 100.</description>
        <errorConditionFormula>Rate_Card_Percentage_Discount__c &lt; 0 || Rate_Card_Percentage_Discount__c &gt; 100</errorConditionFormula>
        <errorMessage>The Rate Card Percentage Discount must be between 0 and 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opp_Rate_Card_Set_Currency_Mismatch</fullName>
        <active>true</active>
        <description>The currency must be the same for the opportunity and the rate card set.</description>
        <errorConditionFormula>(Rate_Card_Set__c &lt;&gt; NULL) &amp;&amp;(ISPICKVAL(CurrencyIsoCode, &apos;&apos;) ||
		ISPICKVAL(Rate_Card_Set__r.CurrencyIsoCode , &apos;&apos;) ||
		(TEXT(Rate_Card_Set__r.CurrencyIsoCode) &lt;&gt; TEXT(CurrencyIsoCode)))</errorConditionFormula>
        <errorMessage>You cannot associate the rate card set with the opportunity. They must both use the same currency.</errorMessage>
    </validationRules>
</CustomObject>